<resources>
    <string name="app_name">Currency</string>
    <string name="title_activity_main">Currency</string>
    <string name="pref_key_currencies_to_show">pref_key_currencies_to_show</string>
    <string name="select_currencies">SELECT CURRENCIES</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="error_api_not_available">Currency API is not available at the moment.</string>
    <string name="about_content">M. Şamil Ateşoğlu &#169; 2019\n\nThis app lets you view exchange rates over a base currency.</string>
    <string name="butterknife_license">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="retrofit_license">Copyright 2013 Square, Inc.\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="picasso_license">Copyright 2013 Square, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="expandable_layout_license">Copyright 2016 Daniel Cachapa.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="mpandroidchart_license">Copyright 2019 Philipp Jahoda\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="about_upper">ABOUT</string>
    <string name="licenses_upper">LICENSES</string>
    <string name="picasso">Picasso</string>
    <string name="retrofit">Retrofit</string>
    <string name="butterknife">Butterknife</string>
    <string name="settings_upper">SETTINGS</string>
    <string name="pref_summary_update_interval">Number of seconds between updating exchange rates.</string>
    <string name="pref_title_update_interval">Update Interval</string>
    <string name="pref_summary_precision">Number of digits you want to see after decimal point.</string>
    <string name="pref_title_precision">Precision</string>
    <string name="pref_key_precision">pref_key_precision</string>
    <string name="pref_key_update_interval">pref_key_update_interval</string>
    <string name="pref_key_base_currency">pref_key_base_currency</string>
    <string name="save">SAVE</string>
    <string name="right_arrow">→</string>
    <string name="loading">Loading…</string>
    <string name="pref_summary_base_currency">Tap to set base currency.</string>
    <string name="pref_title_base_currency">Base Currency</string>
    <string name="select_base_currency">SELECT BASE CURRENCY</string>
    <string name="chart_view_title">LAST 90 DAYS</string>
    <string name="mpandroidchart">MPAndroidChart</string>
    <string name="expandable_layout">Expandable Layout</string>
    <string name="app_summary">View up-to-date exchange rates.</string>
</resources>
